fix:overflow

--- a/styles/headerStyle.css
+++ b/styles/headerStyle.css
@@ -121,7 +121,6 @@ nav a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: aqua;
     margin: 0 1rem;
 }
 
